Make branch root Dockerfile the docker-first chelan build (drop chelan/ subfolder)